syntax = "proto3";

package common;
import "common/types.proto";
import "common/entities.proto";

option java_package = "com.hackathonhub.common.grpc";


message UserDto {
    string id = 1;
    string username = 2;
    string fullName = 3;
    string email = 4;
    bool isActivated = 5;
    repeated Role roles = 6;
}